--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Agenda</string>
+    <string name="app_name">Agenda de Alunos 2.0</string>
+        <string name="name">Nome</string>
+        <string name="email">E-mail</string>
+        <string name="phone">Telefone</string>
+        <string name="save">Salvar</string>
+        <string name="information">Informação</string>
+        <string name="site">Site</string>
+        <string name="address">Endereço</string>
 </resources>
